--- a/index.html
+++ b/index.html
@@ -10,13 +10,32 @@
 
 
 <body>
-    <h1>Hello</h1>
-    <form>
-        <input type="email" placeholder="Enter your email:" />
-        <input type="password" placeholder="Enter your password:" />
-        <input type="submit" value="Login" />
-    </form>
-
+    <div class="container">
+        <h1>Austin</h1>
+        <ul>
+            <li> Friday 05:00
+            </li>
+            <li> Clear
+            </li>
+        </ul>
+    <div class="row">
+        <div class="col-6">
+            <img src="https://icons-for-free.com/iconfiles/png/512/sunny+temperature+weather+icon-1320196637430890623.png" alt="Clear" />
+            12°C | °F
+        </div>
+    <div class="col-6">
+        <ul>
+            <li> Precipitation: 0% </li>
+            <li> Humidity: 73% </li>
+            <li> Wind: 2 km/h </li>
+        </ul>
+    </div>
+    </div>
+    </div>
+<br />
+            <small> 
+            <a href="https://github.com/kristink12/Weather-App2"> This app is an open-source coded by Kristin Peters </a>
+            </small>
 <script src="script.js"></script>
 
 </body>
