--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
 <body>
     <div class="container">
+        <div class="weather-app">
         <h1>Austin</h1>
         <ul>
             <li> Friday 05:00
@@ -32,9 +33,11 @@
     </div>
     </div>
     </div>
+    </div>
 <br />
             <small> 
-            <a href="https://github.com/kristink12/Weather-App2"> This app is an open-source coded by Kristin Peters </a>
+            <a href="https://github.com/kristink12/Weather-App2" target="_blank">Open-source coded by</a>
+             Kristin Peters
             </small>
 <script src="script.js"></script>
 
