--- a/index.html
+++ b/index.html
@@ -1,46 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
-    <link rel="stylesheet" href="style.css" />
-    <title> GIT with Matt SEPT</title>
-</head>
-
-
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+      crossorigin="anonymous"
+    />
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <link rel="stylesheet" href="src/style.css" />
+    <title> Weather App SEPT </title>
+  </head>
+  <body>
     <div class="container">
+      <div class="weather-app-wrapper">
         <div class="weather-app">
-        <h1>Austin</h1>
-        <ul>
-            <li> Friday 05:00
-            </li>
-            <li> Clear
-            </li>
-        </ul>
-    <div class="row">
-        <div class="col-6">
-            <img src="https://icons-for-free.com/iconfiles/png/512/sunny+temperature+weather+icon-1320196637430890623.png" alt="Clear" />
-            12°C | °F
+          <form id="search-form" class="mb-3">
+            <div class="row">
+              <div class="col-9">
+                <input
+                  type="search"
+                  placeholder="Type a city..."
+                  class="form-control"
+                  id="city-input"
+                  autocomplete="off" />
+              </div>
+              <div class="col-3">
+                <input
+                  type="submit"
+                  value="Search"
+                  class="btn btn-primary w-100" />
+              </div>
+            </div>
+          </form>
+          <div class="overview">
+            <h1 id="city"> </h1>
+            <ul>
+              <li> Last updated: <span id="date"></span></li>
+              <li id="description"></li>
+            </ul>
+          </div>
+          <div class="row">
+            <div class="col-6">
+              <div class="clearfix weather-temperature"> <img src="https://static.thenounproject.com/png/121248-200.png" alt="Clear" id="icon" class="float-left" />
+                <div class="float-left">
+                  <strong id="temperature"></strong>
+                  <span class="units"> °C</span>
+                </div>
+              </div>
+            </div>
+            <div class="col-6">
+              <ul>
+                <li>Humidity: <span id="humidity"></span>%</li>
+                <li>Wind: <span id="wind"></span> m/h</li>
+            </ul>
+          </div>
         </div>
-    <div class="col-6">
-        <ul>
-            <li> Precipitation: 0% </li>
-            <li> Humidity: 73% </li>
-            <li> Wind: 2 km/h </li>
-        </ul>
+        <div class="weather-forecast" id="forecast"></div>
+      </div>
+      <small>
+        <a
+          href="https://github.com/kristink12/Weather-App2"
+          target="_blank"
+          >Open-source code</a
+        >
+        by Kristin Peters
+      </small>
     </div>
-    </div>
-    </div>
-    </div>
-<br />
-            <small> 
-            <a href="https://github.com/kristink12/Weather-App2" target="_blank">Open-source coded by</a>
-             Kristin Peters
-            </small>
-<script src="script.js"></script>
-
+  </div>
+  <script src="src/app.js"></script>
 </body>
 </html>
