--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
       integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
       crossorigin="anonymous"
     />
-    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <link rel="stylesheet" href="src/style.css" />
-    <title> Weather App SEPT </title>
+    <script src="script.js"></script>
+    <link rel="stylesheet" href="style.css" />
+    <title> Weather App SEPT7 </title>
   </head>
   <body>
     <div class="container">
@@ -21,7 +21,7 @@
           <form id="search-form">
               <input type="search" placeholder="Enter your city" id="city-input" />
               <input type="submit" value="Search" class="btn btn-primary" />   
-              <input type= "submit"  value= "Current" id="current-location" class="btn btn-primary" />
+              <button type="button" id="current-location" class="btn btn-primary">Current</button>
           </div> 
           </form>      
           
