Attempt to correct buttons

--- a/index.html
+++ b/index.html
@@ -10,29 +10,44 @@
       integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
       crossorigin="anonymous"
     />
-    <script src="script.js"></script>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <link rel="stylesheet" href="style.css" />
-    <title> Weather App SEPT7 </title>
+    <title> Weather App SEPT 12th </title>
   </head>
+  
   <body>
     <div class="container">
-
-        <div class ="card">
-          <form id="search-form">
-              <input type="search" placeholder="Enter your city" id="city-input" />
-              <input type="submit" value="Search" class="btn btn-primary" />   
-              <button type="button" id="current-location" class="btn btn-primary">Current</button>
-          </div> 
-          </form>      
-          
-         <div class="header">
-         <span class="city" id="city">
-         </span>
- 
-              
+      <div class="weather-app">
+        <form class="search-form" id="search-form">
+          <div class="row">
+            <div class="col-6">
+              <input
+                type="search"
+                placeholder="Type a city..."
+                autofocus="on"
+                autocomplete="off"
+                id="city-input"
+                class="form-control shadow-sm"/>
             </div>
-          </form>
-          <div class="overview">
+            <div class="col-3">
+              <input
+                type="submit"
+                value="Search"
+                class="form-control btn btn-primary shadow-sm w-100"/>
+            </div>
+            <div class="col-3">
+              <button
+                class="btn btn-success w-100"
+                id="current-location-button"> Current
+              </button>
+            </div>
+          </div>
+        </form>      
+        <h1 id="city"></h1>
+        <ul>
+          <li id="date"></li>
+          <li id="description"></li>
+        </ul>
             <h1 id="city"> </h1>
           </div>
           <div class="row">
@@ -62,24 +77,27 @@
             Tue </br> ☁ </br> 89°F Sunny
           </div>
           <div class="col-2">
-           Wed </br> 🌤 </br> 90°F Cloudy          
+            Wed </br> 🌤 </br> 90°F Cloudy          
           </div>
           <div class="col-2">
-          Thu </br> 🌤 </br> 91°F Sunny 
+            Thu </br> 🌤 </br> 91°F Sunny 
           </div>
           <div class="col-2">
-           Fri </br> 🌧 </br> 92°F Rainy
+            Fri </br> 🌧 </br> 92°F Rainy
           </div>
           <div class="col-2">
-           Sat </br> 🌤 </br> 93°F Sunny 
+            Sat </br> 🌤 </br> 93°F Sunny 
           </div>
           <div class="col-2">
-           Sun </br> 🌤 </br> 94°F Sunny 
+            Sun </br> 🌤 </br> 94°F Sunny 
           </div>
         </div>
       </div>
     </div>
-</div>
+  </div>
+
+<br />
+<br />
 
 <small> 
     <a
@@ -87,8 +105,7 @@
       target="_blank" >Open-source code</a>
     by Kristin Peters
   </small>
-  <br />
-
+  
   <script src="src/app.js"></script>
 </body>
 </html>
