Search button attempt

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     />
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <link rel="stylesheet" href="style.css" />
-    <title> Weather App SEPT 14th </title>
+    <title> Weather App SEPT 14th! </title>
   </head>
   
   <body>
