--- a/index.html
+++ b/index.html
@@ -8,11 +8,10 @@
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
       integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
-      crossorigin="anonymous"
-    />
-    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <link rel="stylesheet" href="style.css" />
-    <title> Weather App SEPT 14th! </title>
+      crossorigin="anonymous"/>
+    <script src="script.js"></script>
+    
+    <title> Weather App SEPT 16th! </title>
   </head>
   
   <body>
@@ -52,7 +51,7 @@
           </div>
           <div class="row">
             <div class="col-6">
-              <div class="clearfix weather-temperature"> <img src="https://i.pinimg.com/564x/84/a1/6a/84a16af6971e5c4234fa132c06b14969.jpg" alt="Clear" id="icon" class="float-left" />
+              <div class="clearfix weather-temperature"> <img src="https://i.pinimg.com/564x/84/a1/6a/84a16af6971e5c4234fa132c06b14969.jpg" alt="Clear" width="70" id="icon" class="float-left" />
                 <div class="float-left">
                   <strong id="temperature"></strong>
                   <span class="units"> °F</span>
