--- a/index.html
+++ b/index.html
@@ -4,54 +4,53 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
-      crossorigin="anonymous"/>
-    <script src="script.js"></script>
-    
-    <title> Weather App SEPT 16th! </title>
+    <link rel="stylesheet"
+    href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+    crossorigin="anonymous" />
+
+  <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+
+  <link rel="stylesheet" href="src/style.css" />
+
+  <title> Weather App SEPT 16th! </title>
+
   </head>
   
   <body>
     <div class="container">
-      <div class="weather-app">
-        <form class="search-form" id="search-form">
+     <div class="weather-app-wrapper">
+      <div class="weather-app">  
+        <form id="search-form"class="mb-3">
           <div class="row">
-            <div class="col-6">
+            <div class="col-9">
               <input
                 type="search"
                 placeholder="Type a city..."
-                autofocus="on"
                 autocomplete="off"
                 id="city-input"
-                class="form-control shadow-sm"/>
+                class="form-control"/>
             </div>
             <div class="col-3">
               <input
                 type="submit"
                 value="Search"
-                class="form-control btn btn-primary shadow-sm w-100"/>
+                class="btn btn-primary w-100"/>
             </div>
-            <div class="col-3">
-              <button
-                class="btn btn-success w-100"
-                id="current-location-button"> Current
-              </button>
+           </div>
+          </form> 
+
+            <div class="overview">
+              <h1 id="city"></h1>
+              <ul>
+                <li>Last updated: <span id="date"></span></li>
+                <li id="description"></li>
+              </ul>
             </div>
-          </div>
-        </form>      
-        <h1 id="city"></h1>
-        <ul>
-          <li id="date"></li>
-          <li id="description"></li>
-        </ul>
-            <h1 id="city"> </h1>
-          </div>
-          <div class="row">
-            <div class="col-6">
-              <div class="clearfix weather-temperature"> <img src="https://i.pinimg.com/564x/84/a1/6a/84a16af6971e5c4234fa132c06b14969.jpg" alt="Clear" width="70" id="icon" class="float-left" />
+            <div class="row">
+             <div class="col-6">
+              <div class="clearfix weather-temperature">
+                <img src="" alt="" id="icon" class="float-left" />
                 <div class="float-left">
                   <strong id="temperature"></strong>
                   <span class="units"> °F</span>
@@ -60,40 +59,14 @@
             </div>
             <div class="col-6">
               <ul>
-                <li>Humidity: <span id="humidity"></span> %</li>
-                <li>Wind: <span id="wind"></span> mph</li>
-            </ul>
+                <li> Humidity: <span id="humidity"> </span>%</li>
+                <li> Wind: <span id="wind"> </span> mph </li>
+              </ul>
+            </div>
           </div>
-        </div>
-       <div class="weather-forecast" id="forecast"></div>
+        <div class="weather-forecast" id="forecast"></div>
       </div>
-    </div>
-  </div>
 
-  <div class="container">
-          <div class="row">
-          <div class="col-2">
-            Tue </br> ☁ </br> 89°F Sunny
-          </div>
-          <div class="col-2">
-            Wed </br> 🌤 </br> 90°F Cloudy          
-          </div>
-          <div class="col-2">
-            Thu </br> 🌤 </br> 91°F Sunny 
-          </div>
-          <div class="col-2">
-            Fri </br> 🌧 </br> 92°F Rainy
-          </div>
-          <div class="col-2">
-            Sat </br> 🌤 </br> 93°F Sunny 
-          </div>
-          <div class="col-2">
-            Sun </br> 🌤 </br> 94°F Sunny 
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
 
 <br />
 <br />
@@ -104,6 +77,8 @@
       target="_blank" >Open-source code</a>
     by Kristin Peters
   </small>
+ </div>
+</div>
 
   <script src="src/app.js"></script>
 </body>
