--- a/index.html
+++ b/index.html
@@ -4,83 +4,86 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet"
-    href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" 
+    rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" 
     crossorigin="anonymous" />
 
-  <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <!--KP:DON'T MESS WITH THE BELOW LINE, IT IS 100% CORRECT-->
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 
-  <link rel="stylesheet" href="src/style.css" />
 
-  <title> Weather App SEPT 16th! </title>
+    <link rel="stylesheet" href="style.css" />
+    <script src="script.js"></script>
+
+   
+  <title> Weather App SEPT 21st </title>
 
   </head>
   
   <body>
     <div class="container">
-     <div class="weather-app-wrapper">
-      <div class="weather-app">  
-        <form id="search-form"class="mb-3">
+      <div class="weather-app">
+        <form class="search-form" id="search-form">
           <div class="row">
-            <div class="col-9">
+            <div class="col-6">
               <input
                 type="search"
                 placeholder="Type a city..."
+                autofocus="on"
                 autocomplete="off"
                 id="city-input"
-                class="form-control"/>
+                class="form-control shadow-sm"
+              />
             </div>
             <div class="col-3">
               <input
                 type="submit"
                 value="Search"
-                class="btn btn-primary w-100"/>
+                class="form-control btn btn-primary shadow-sm w-100"
+              />
             </div>
-           </div>
-          </form> 
-
-            <div class="overview">
-              <h1 id="city"></h1>
-              <ul>
-                <li>Last updated: <span id="date"></span></li>
-                <li id="description"></li>
-              </ul>
-            </div>
-            <div class="row">
-             <div class="col-6">
-              <div class="clearfix weather-temperature">
-                <img src="" alt="" id="icon" class="float-left" />
-                <div class="float-left">
-                  <strong id="temperature"></strong>
-                  <span class="units"> °F</span>
-                </div>
-              </div>
-            </div>
-            <div class="col-6">
-              <ul>
-                <li> Humidity: <span id="humidity"> </span>%</li>
-                <li> Wind: <span id="wind"> </span> mph </li>
-              </ul>
+            <div class="col-3">
+              <button
+                class="btn btn-success w-100"
+                id="current-location-button"
+              >
+                Current
+              </button>
             </div>
           </div>
-        <div class="weather-forecast" id="forecast"></div>
+        </form>
+        <h1 id="city"></h1>
+        <ul>
+          <li id="date"></li>
+          <li id="description"></li>
+        </ul>
+        <div class="row">
+          <div class="col-6">
+            <div class="clearfix">
+              <div class="float-left">
+                <span class="temperature" id="temperature"></span
+                ><span class="units">°C</span>
+              </div>
+            </div>
+          </div>
+          <div class="col-6">
+            <ul>
+              <li>Humidity: <span id="humidity"></span>%</li>
+              <li>Wind: <span id="wind"></span> mph</li>
+            </ul>
+          </div>
+        </div>
       </div>
+    </div>
+    <script src="src/index.js"></script>
+  </body>
+<!-- MIGHT NEED TO DELETE THE FOLLOWING TWO LINES-->
+<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+  
+<script src="script.js"></script>
 
-
-<br />
-<br />
-
-<small> 
-    <a
-      href="https://github.com/kristink12/Weather-App2"
-      target="_blank" >Open-source code</a>
-    by Kristin Peters
-  </small>
- </div>
-</div>
-
-  <script src="src/app.js"></script>
 </body>
 
 </html>
