--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" 
     crossorigin="anonymous" />
 
-    <!--KP:DON'T MESS WITH THE BELOW LINE, IT IS 100% CORRECT-->
+    <!--KP:DON'T MESS WITH THE ONE BELOW LINE, IT IS 100% CORRECT-->
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 
 
@@ -17,7 +17,7 @@
     <script src="script.js"></script>
 
    
-  <title> Weather App SEPT 21st </title>
+  <title> Weather App SEPT 22nd </title>
 
   </head>
   
@@ -63,7 +63,7 @@
             <div class="clearfix">
               <div class="float-left">
                 <span class="temperature" id="temperature"></span
-                ><span class="units">°C</span>
+                ><span class="units">°F</span>
               </div>
             </div>
           </div>
@@ -76,14 +76,24 @@
         </div>
       </div>
     </div>
-    <script src="src/index.js"></script>
-  </body>
-<!-- MIGHT NEED TO DELETE THE FOLLOWING TWO LINES-->
+<br />
+<br />
+
+<small> 
+  <a
+    href="https://github.com/kristink12/Weather-App2"
+    target="_blank" >Open-source code</a>
+  by Kristin Peters
+</small>
+
+
+<script src="index.js"></script>
+
+<!-- MIGHT NEED TO DELETE THE FOLLOWING LINE...?-->
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
   
 <script src="script.js"></script>
 
-</body>
 
+</body>
 </html>
