Functional City/Weather Search
Now functional = Type a city, search, day, time, weather, degrees Celsius.
Not *yet* functional = Current location button, degrees Fahrenheit.

--- a/index.html
+++ b/index.html
@@ -9,12 +9,10 @@
     rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" 
     crossorigin="anonymous" />
 
-    <!--KP:DON'T MESS WITH THE ONE BELOW LINE, IT IS 100% CORRECT-->
+    <!--KP:DON'T MESS WITH THE TWO BELOW LINES, THEY ARE 100% CORRECT-->
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-
-
     <link rel="stylesheet" href="style.css" />
-    <script src="script.js"></script>
+    
 
    
   <title> Weather App SEPT 22nd </title>
@@ -63,7 +61,7 @@
             <div class="clearfix">
               <div class="float-left">
                 <span class="temperature" id="temperature"></span
-                ><span class="units">°F</span>
+                ><span class="units">°C</span>
               </div>
             </div>
           </div>
