--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
       rel="stylesheet" />
 
     <link href="https://fonts.googleapis.com/css2?family=Freckle+Face&family=Montserrat:wght@600&family=Orbitron:wght@400;500;600&family=Roboto&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="style.css" />
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <title>Weather App 28th c'mon</title>
+    <title>Weather App 30th ugh</title>
   </head>
   <body>
     <div class="container">
@@ -73,7 +73,6 @@
           target="_blank" >Open-source code</a>
         by Kristin Peters
       </small>
-           <script src="index.js"></script>
            <script src="script.js"></script>
         </div>
   </body>
