--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Freckle+Face&family=Montserrat:wght@600&family=Orbitron:wght@400;500;600&family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css" />
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <title>Weather App 30th ugh</title>
+    <title>Weather App 4th</title>
   </head>
   <body>
     <div class="container">
       <div class="weather-app">
         <div class="row">
           <div class="col-6">
-        <h1> Buda </h1></div>
+        <h1> Austin </h1></div>
         <div class="col-6">
         <button id="current-location-button">My current location</button>
         </div>
@@ -35,10 +35,11 @@
             <ul>
               <li><span id="date"></span></li>
               <li id="description"></li>
-              <li><div class="clearfix weather-temperature">
+              <li>
+                <div class="clearfix weather-temperature">
                 <img src="" alt="Clear" id="icon" class="float-left" />
                 <div class="float-left"><strong id="current-temperature"></strong><span class="units"> °F</span>
-                  <div class="float-left" id="current-temperature"><span class="units"> °C</span>
+                <div class="float-left" id="current-temperature"><span class="units"> °C</span>
                 </div>
                 </li>
                 </ul>
@@ -55,7 +56,7 @@
         <br />
         <form id="city-weather">
           <div class="row">
-            <div class="col-8">
+            <div class="col-6">
               <input
                 type="search"
                 placeholder="Type a city...">
