--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <div class="col-6">
         <h1> Austin </h1></div>
         <div class="col-6">
-        <button id="current-location-button">My current location</button>
+        <button id="current-location-button">my current location</button>
         </div>
         </div>
         <div class="row">
@@ -42,7 +42,7 @@
                 <div class="float-left" id="current-temperature"><span class="units"> °C</span>
                 </div>
                 </li>
-                </ul>
+            </ul>
           </div>
           <div class="col-6">
             <ul>
@@ -71,7 +71,7 @@
       </div>
       <small> 
         <a href="https://github.com/kristink12/Weather-App2"
-          target="_blank" >Open-source code</a>
+          target="_blank" >My first open-source code</a>
         by Kristin Peters
       </small>
            <script src="script.js"></script>
