Successful city Search fix
Finally

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Freckle+Face&family=Montserrat:wght@600&family=Orbitron:wght@400;500;600&family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css" />
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <title>Weather App 4th</title>
+    <title>Weather App 5th</title>
   </head>
   <body>
     <div class="container">
@@ -57,7 +57,7 @@
         <form id="city-weather">
           <div class="row">
             <div class="col-6">
-              <input
+              <input id="city-input"
                 type="search"
                 placeholder="Type a city...">
               
