Updated title date

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Freckle+Face&family=Montserrat:wght@600&family=Orbitron:wght@400;500;600&family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css" />
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <title>Weather App 5th</title>
+    <title>Weather App 7th</title>
   </head>
   <body>
     <div class="container">
@@ -27,7 +27,7 @@
           <div class="col-6">
         <h1> Austin </h1></div>
         <div class="col-6">
-        <button id="current-location-button">my current location</button>
+        <button id="current-location-button">My current location</button>
         </div>
         </div>
         <div class="row">
