--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Freckle+Face&family=Montserrat:wght@600&family=Orbitron:wght@400;500;600&family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css" />
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <title>Weather App 7th</title>
+    <title>Weather App 11th</title>
   </head>
   <body>
     <div class="container">
@@ -38,8 +38,8 @@
               <li>
                 <div class="clearfix weather-temperature">
                 <img src="" alt="Clear" id="icon" class="float-left" />
-                <div class="float-left"><strong id="current-temperature"></strong><span class="units"> °F</span>
-                <div class="float-left" id="current-temperature"><span class="units"> °C</span>
+                <div class="float-right"><strong id="current-temperature"></strong><span class="units"> °F</span>
+                <div class="float-right" id="current-temperature"><span class="units"> °C</span>
                 </div>
                 </li>
             </ul>
@@ -63,8 +63,8 @@
               
             </div>
             <div class="col-4">
-              <input type="submit" value="Search" class="form-control btn btn-primary shadow-sm w-100">
-              
+              <input type="submit" value="Search" class="form-control btn btn-primary shadow-sm w-100"> 
+
             </div>
           </div>
         </form>
@@ -75,6 +75,7 @@
         by Kristin Peters
       </small>
            <script src="script.js"></script>
+  <img src="http://assets.stickpng.com/images/5f463a92803a0d0004146bd8.png" alt="Happy Cloud" class="center"> 
         </div>
   </body>
 </html>
