--- a/index.html
+++ b/index.html
@@ -18,10 +18,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Freckle+Face&family=Montserrat:wght@600&family=Orbitron:wght@400;500;600&family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css" />
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <title>Weather App 11th</title>
+    <title>Weather App 13th</title>
   </head>
   <body>
     <div class="container">
+      <div class="weather-app-wrapper"></div>
       <div class="weather-app">
         <div class="row">
           <div class="col-6">
@@ -48,7 +49,7 @@
             <ul>
               <li>Humidity: <span id="humidity"></span>%</li>
               <li>Wind: <span id="wind"></span> mph</li>
-              <li>Precipitation: <span id="precipitation"></span> 0%</li>
+              <li>Precipitation: <span id="precipitation"></span>%</li>
             </ul>
           </div>
         </div>
